<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/front_background"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button1"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/one_player_game_description"
        ></ImageView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/two_player_game_description"
        android:src="@drawable/button2" ></ImageView>


    <ImageView
        android:id="@+id/question_mark"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/question"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/question" />

    <ImageView
        android:id="@+id/setting_gear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/setting"
        android:src="@drawable/setting"/>
</RelativeLayout>